--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=c00f88bad9b051b663afc06a073edbcf
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://root:Edu-Com17@127.0.0.1:3306/ecopowrrr?serverVersion=10.4.27-MariaDB"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
